<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_series_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cz.sucharda.seriesapp.SeriesAddActivity">

    <TextView
        android:text="@string/as_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/asa_label_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/as_name"
        android:ems="10"
        android:lines="1"
        android:layout_below="@+id/asa_label_name"
        android:layout_alignParentStart="true"
        android:id="@+id/asa_name" />

    <TextView
        android:text="@string/as_label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/asa_name"
        android:id="@+id/asa_label_description" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/as_description"
        android:lines="3"
        android:ems="10"
        android:layout_below="@+id/asa_label_description"
        android:layout_alignParentStart="true"
        android:id="@+id/asa_description" />

    <RelativeLayout
        android:id="@+id/asa_layout_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/asa_description"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/asa_ld_label_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/as_ld_label_startDate"/>

        <Button
            android:id="@+id/asa_ld_startDate"
            android:text="@string/as_ld_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/asa_ld_label_startDate"/>

        <TextView
            android:id="@+id/asa_ld_label_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/as_ld_label_endDate"
            android:layout_toEndOf="@+id/asa_ld_startDate"/>

        <Button
            android:id="@+id/asa_ld_endDate"
            android:text="@string/as_ld_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_below="@+id/asa_ld_label_endDate"
            android:layout_toEndOf="@+id/asa_ld_startDate"/>

    </RelativeLayout>

    <CheckBox
        android:id="@+id/asa_finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/as_finished"
        android:layout_below="@+id/asa_layout_date" />

    <Button
        android:text="@string/asa_saveSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/asa_saveSeries" />

</RelativeLayout>
