<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_homework_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cz.sucharda.seriesapp.SeriesDetailActivity">

    <TextView
        android:text="@string/as_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/asd_label_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/as_name"
        android:ems="10"
        android:layout_below="@+id/asd_label_name"
        android:layout_alignParentStart="true"
        android:id="@+id/asd_name" />

    <TextView
        android:text="@string/as_label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/asd_name"
        android:id="@+id/asd_label_description" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/as_description"
        android:ems="10"
        android:layout_below="@+id/asd_label_description"
        android:layout_alignParentStart="true"
        android:id="@+id/asd_description" />

    <RelativeLayout
        android:id="@+id/asd_layout_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/asd_description"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/asd_ld_label_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/as_ld_label_startDate"/>

        <Button
            android:id="@+id/asd_ld_startDate"
            android:text="@string/as_ld_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/asd_ld_label_startDate"/>

        <TextView
            android:id="@+id/asd_ld_label_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/as_ld_label_endDate"
            android:layout_toEndOf="@+id/asd_ld_startDate"/>

        <Button
            android:id="@+id/asd_ld_endDate"
            android:text="@string/as_ld_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/asd_ld_label_endDate"
            android:layout_toEndOf="@+id/asd_ld_startDate"/>

    </RelativeLayout>

    <CheckBox
        android:id="@+id/asd_finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/as_finished"
        android:layout_below="@+id/asd_layout_date" />

    <Button
        android:text="@string/asd_saveSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/asd_saveSeries" />

</RelativeLayout>
